ruleql/pkg/ruleql/parser/qingql_parser.go
// Generated from QingQL.g4 by ANTLR 4.7.

package parser // QingQL

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "','", "'#'", "'('", "')'", "'\"'", "'['", "']'", "'[]'", "'[#]'",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "'*'", "'/'", "'%'", "'+'",
	"'-'", "'.'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "AS", "AND", "CASE", "ELSE", "END",
	"EQ", "FROM", "GT", "GTE", "LT", "LTE", "NE", "NOT", "NULL", "OR", "SELECT",
	"THEN", "WHERE", "WHEN", "GROUP", "BY", "TUMBLINGWINDOW", "HOPPINGWINDOW",
	"SLIDINGWINDOW", "SESSIONWINDOW", "DD", "HH", "MI", "SS", "MS", "MUL",
	"DIV", "MOD", "ADD", "SUB", "DOT", "TRUE", "FALSE", "INDENTIFIER", "NUMBER",
	"INTEGER", "FLOAT", "TOPICITEM", "PATHITEM", "ARRAYITEM", "STRING", "WHITESPACE",
}

var ruleNames = []string{
	"root", "fields", "field_elem", "topic", "topic_item", "where", "filter",
	"filter_condition", "filter_condition_or", "filter_condition_not", "group",
	"group_by_elements", "group_by_element", "group_window_unit", "group_window_length",
	"group_window_interval", "group_windows", "group_tumbling_window", "group_hopping_window",
	"group_sliding_window", "group_session_window", "expr", "constant", "switch_stmt",
	"call_expr", "asterisk", "xpath_name", "dotnotation", "identifierWithTOPICITEM",
	"identifierWithQualifier",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type QingQLParser struct {
	*antlr.BaseParser
}

func NewQingQLParser(input antlr.TokenStream) *QingQLParser {
	this := new(QingQLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "QingQL.g4"

	return this
}

// QingQLParser tokens.
const (
	QingQLParserEOF            = antlr.TokenEOF
	QingQLParserT__0           = 1
	QingQLParserT__1           = 2
	QingQLParserT__2           = 3
	QingQLParserT__3           = 4
	QingQLParserT__4           = 5
	QingQLParserT__5           = 6
	QingQLParserT__6           = 7
	QingQLParserT__7           = 8
	QingQLParserT__8           = 9
	QingQLParserAS             = 10
	QingQLParserAND            = 11
	QingQLParserCASE           = 12
	QingQLParserELSE           = 13
	QingQLParserEND            = 14
	QingQLParserEQ             = 15
	QingQLParserFROM           = 16
	QingQLParserGT             = 17
	QingQLParserGTE            = 18
	QingQLParserLT             = 19
	QingQLParserLTE            = 20
	QingQLParserNE             = 21
	QingQLParserNOT            = 22
	QingQLParserNULL           = 23
	QingQLParserOR             = 24
	QingQLParserSELECT         = 25
	QingQLParserTHEN           = 26
	QingQLParserWHERE          = 27
	QingQLParserWHEN           = 28
	QingQLParserGROUP          = 29
	QingQLParserBY             = 30
	QingQLParserTUMBLINGWINDOW = 31
	QingQLParserHOPPINGWINDOW  = 32
	QingQLParserSLIDINGWINDOW  = 33
	QingQLParserSESSIONWINDOW  = 34
	QingQLParserDD             = 35
	QingQLParserHH             = 36
	QingQLParserMI             = 37
	QingQLParserSS             = 38
	QingQLParserMS             = 39
	QingQLParserMUL            = 40
	QingQLParserDIV            = 41
	QingQLParserMOD            = 42
	QingQLParserADD            = 43
	QingQLParserSUB            = 44
	QingQLParserDOT            = 45
	QingQLParserTRUE           = 46
	QingQLParserFALSE          = 47
	QingQLParserINDENTIFIER    = 48
	QingQLParserNUMBER         = 49
	QingQLParserINTEGER        = 50
	QingQLParserFLOAT          = 51
	QingQLParserTOPICITEM      = 52
	QingQLParserPATHITEM       = 53
	QingQLParserARRAYITEM      = 54
	QingQLParserSTRING         = 55
	QingQLParserWHITESPACE     = 56
)

// QingQLParser rules.
const (
	QingQLParserRULE_root                    = 0
	QingQLParserRULE_fields                  = 1
	QingQLParserRULE_field_elem              = 2
	QingQLParserRULE_topic                   = 3
	QingQLParserRULE_topic_item              = 4
	QingQLParserRULE_where                   = 5
	QingQLParserRULE_filter                  = 6
	QingQLParserRULE_filter_condition        = 7
	QingQLParserRULE_filter_condition_or     = 8
	QingQLParserRULE_filter_condition_not    = 9
	QingQLParserRULE_group                   = 10
	QingQLParserRULE_group_by_elements       = 11
	QingQLParserRULE_group_by_element        = 12
	QingQLParserRULE_group_window_unit       = 13
	QingQLParserRULE_group_window_length     = 14
	QingQLParserRULE_group_window_interval   = 15
	QingQLParserRULE_group_windows           = 16
	QingQLParserRULE_group_tumbling_window   = 17
	QingQLParserRULE_group_hopping_window    = 18
	QingQLParserRULE_group_sliding_window    = 19
	QingQLParserRULE_group_session_window    = 20
	QingQLParserRULE_expr                    = 21
	QingQLParserRULE_constant                = 22
	QingQLParserRULE_switch_stmt             = 23
	QingQLParserRULE_call_expr               = 24
	QingQLParserRULE_asterisk                = 25
	QingQLParserRULE_xpath_name              = 26
	QingQLParserRULE_dotnotation             = 27
	QingQLParserRULE_identifierWithTOPICITEM = 28
	QingQLParserRULE_identifierWithQualifier = 29
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_root
	return p
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) SELECT() antlr.TerminalNode {
	return s.GetToken(QingQLParserSELECT, 0)
}

func (s *RootContext) Fields() IFieldsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFieldsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFieldsContext)
}

func (s *RootContext) FROM() antlr.TerminalNode {
	return s.GetToken(QingQLParserFROM, 0)
}

func (s *RootContext) Topic() ITopicContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITopicContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITopicContext)
}

func (s *RootContext) Where() IWhereContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWhereContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IWhereContext)
}

func (s *RootContext) Group() IGroupContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IGroupContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IGroupContext)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterRoot(s)
	}
}

func (s *RootContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitRoot(s)
	}
}

func (p *QingQLParser) Root() (localctx IRootContext) {
	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, QingQLParserRULE_root)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(60)
		p.Match(QingQLParserSELECT)
	}
	{
		p.SetState(61)
		p.Fields()
	}
	{
		p.SetState(62)
		p.Match(QingQLParserFROM)
	}
	{
		p.SetState(63)
		p.Topic()
	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == QingQLParserWHERE {
		{
			p.SetState(64)
			p.Where()
		}

	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == QingQLParserGROUP {
		{
			p.SetState(67)
			p.Group()
		}

	}

	return localctx
}

// IFieldsContext is an interface to support dynamic dispatch.
type IFieldsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFieldsContext differentiates from other interfaces.
	IsFieldsContext()
}

type FieldsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldsContext() *FieldsContext {
	var p = new(FieldsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_fields
	return p
}

func (*FieldsContext) IsFieldsContext() {}

func NewFieldsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldsContext {
	var p = new(FieldsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_fields

	return p
}

func (s *FieldsContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldsContext) AllField_elem() []IField_elemContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IField_elemContext)(nil)).Elem())
	var tst = make([]IField_elemContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IField_elemContext)
		}
	}

	return tst
}

func (s *FieldsContext) Field_elem(i int) IField_elemContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IField_elemContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IField_elemContext)
}

func (s *FieldsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterFields(s)
	}
}

func (s *FieldsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitFields(s)
	}
}

func (p *QingQLParser) Fields() (localctx IFieldsContext) {
	localctx = NewFieldsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, QingQLParserRULE_fields)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.Field_elem()
	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == QingQLParserT__0 {
		{
			p.SetState(71)
			p.Match(QingQLParserT__0)
		}
		{
			p.SetState(72)
			p.Field_elem()
		}

		p.SetState(77)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IField_elemContext is an interface to support dynamic dispatch.
type IField_elemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsField_elemContext differentiates from other interfaces.
	IsField_elemContext()
}

type Field_elemContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyField_elemContext() *Field_elemContext {
	var p = new(Field_elemContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_field_elem
	return p
}

func (*Field_elemContext) IsField_elemContext() {}

func NewField_elemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Field_elemContext {
	var p = new(Field_elemContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_field_elem

	return p
}

func (s *Field_elemContext) GetParser() antlr.Parser { return s.parser }

func (s *Field_elemContext) CopyFrom(ctx *Field_elemContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *Field_elemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Field_elemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ExprFieldContext struct {
	*Field_elemContext
}

func NewExprFieldContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExprFieldContext {
	var p = new(ExprFieldContext)

	p.Field_elemContext = NewEmptyField_elemContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Field_elemContext))

	return p
}

func (s *ExprFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExprFieldContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ExprFieldContext) AS() antlr.TerminalNode {
	return s.GetToken(QingQLParserAS, 0)
}

func (s *ExprFieldContext) Xpath_name() IXpath_nameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IXpath_nameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IXpath_nameContext)
}

func (s *ExprFieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterExprField(s)
	}
}

func (s *ExprFieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitExprField(s)
	}
}

type XpathFieldContext struct {
	*Field_elemContext
}

func NewXpathFieldContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *XpathFieldContext {
	var p = new(XpathFieldContext)

	p.Field_elemContext = NewEmptyField_elemContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Field_elemContext))

	return p
}

func (s *XpathFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *XpathFieldContext) Xpath_name() IXpath_nameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IXpath_nameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IXpath_nameContext)
}

func (s *XpathFieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterXpathField(s)
	}
}

func (s *XpathFieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitXpathField(s)
	}
}

func (p *QingQLParser) Field_elem() (localctx IField_elemContext) {
	localctx = NewField_elemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, QingQLParserRULE_field_elem)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(83)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		localctx = NewExprFieldContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(78)
			p.expr(0)
		}
		{
			p.SetState(79)
			p.Match(QingQLParserAS)
		}
		{
			p.SetState(80)
			p.Xpath_name()
		}

	case 2:
		localctx = NewXpathFieldContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(82)
			p.Xpath_name()
		}

	}

	return localctx
}

// ITopicContext is an interface to support dynamic dispatch.
type ITopicContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTopicContext differentiates from other interfaces.
	IsTopicContext()
}

type TopicContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTopicContext() *TopicContext {
	var p = new(TopicContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_topic
	return p
}

func (*TopicContext) IsTopicContext() {}

func NewTopicContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TopicContext {
	var p = new(TopicContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_topic

	return p
}

func (s *TopicContext) GetParser() antlr.Parser { return s.parser }

func (s *TopicContext) AllTopic_item() []ITopic_itemContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITopic_itemContext)(nil)).Elem())
	var tst = make([]ITopic_itemContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITopic_itemContext)
		}
	}

	return tst
}

func (s *TopicContext) Topic_item(i int) ITopic_itemContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITopic_itemContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITopic_itemContext)
}

func (s *TopicContext) AllDIV() []antlr.TerminalNode {
	return s.GetTokens(QingQLParserDIV)
}

func (s *TopicContext) DIV(i int) antlr.TerminalNode {
	return s.GetToken(QingQLParserDIV, i)
}

func (s *TopicContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TopicContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TopicContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterTopic(s)
	}
}

func (s *TopicContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitTopic(s)
	}
}

func (p *QingQLParser) Topic() (localctx ITopicContext) {
	localctx = NewTopicContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, QingQLParserRULE_topic)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(86)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == QingQLParserDIV {
		{
			p.SetState(85)
			p.Match(QingQLParserDIV)
		}

	}
	{
		p.SetState(88)
		p.Topic_item()
	}
	p.SetState(93)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == QingQLParserDIV {
		{
			p.SetState(89)
			p.Match(QingQLParserDIV)
		}
		{
			p.SetState(90)
			p.Topic_item()
		}

		p.SetState(95)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ITopic_itemContext is an interface to support dynamic dispatch.
type ITopic_itemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTopic_itemContext differentiates from other interfaces.
	IsTopic_itemContext()
}

type Topic_itemContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTopic_itemContext() *Topic_itemContext {
	var p = new(Topic_itemContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_topic_item
	return p
}

func (*Topic_itemContext) IsTopic_itemContext() {}

func NewTopic_itemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Topic_itemContext {
	var p = new(Topic_itemContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_topic_item

	return p
}

func (s *Topic_itemContext) GetParser() antlr.Parser { return s.parser }

func (s *Topic_itemContext) TOPICITEM() antlr.TerminalNode {
	return s.GetToken(QingQLParserTOPICITEM, 0)
}

func (s *Topic_itemContext) INDENTIFIER() antlr.TerminalNode {
	return s.GetToken(QingQLParserINDENTIFIER, 0)
}

func (s *Topic_itemContext) NUMBER() antlr.TerminalNode {
	return s.GetToken(QingQLParserNUMBER, 0)
}

func (s *Topic_itemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Topic_itemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Topic_itemContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterTopic_item(s)
	}
}

func (s *Topic_itemContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitTopic_item(s)
	}
}

func (p *QingQLParser) Topic_item() (localctx ITopic_itemContext) {
	localctx = NewTopic_itemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, QingQLParserRULE_topic_item)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(96)
	_la = p.GetTokenStream().LA(1)

	if !(_la == QingQLParserT__1 || (((_la-43)&-(0x1f+1)) == 0 && ((1<<uint((_la-43)))&((1<<(QingQLParserADD-43))|(1<<(QingQLParserINDENTIFIER-43))|(1<<(QingQLParserNUMBER-43))|(1<<(QingQLParserTOPICITEM-43)))) != 0)) {
		p.GetErrorHandler().RecoverInline(p)
	} else {
		p.GetErrorHandler().ReportMatch(p)
		p.Consume()
	}

	return localctx
}

// IWhereContext is an interface to support dynamic dispatch.
type IWhereContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsWhereContext differentiates from other interfaces.
	IsWhereContext()
}

type WhereContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWhereContext() *WhereContext {
	var p = new(WhereContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_where
	return p
}

func (*WhereContext) IsWhereContext() {}

func NewWhereContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *WhereContext {
	var p = new(WhereContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_where

	return p
}
